# uc-mcp-proxy

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  publish.yml
skills/uc-mcp-proxy/: SKILL.md
src/uc_mcp_proxy/: __init__.py  __main__.py
tests/: conftest.py
tests/integration/: test_proxy.py
tests/unit/: test_auth.py  test_bridge.py  test_cli.py
